--- a/Specify/src/edu/ku/brc/specify/tests/forms/view_valid2.xml
+++ b/Specify/src/edu/ku/brc/specify/tests/forms/view_valid2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<viewset name="view valid" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="form.xsd">
+<viewset name="view valid 2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="form.xsd">
     <view id="1" type="form" resourceLabels="false">
         <altviews>
             <alt id="2" label="Alt. Form"/>
@@ -53,7 +53,7 @@
                 <cell type="field" name="dateReceived" label="Date Received"/>
             </row>
             <row>
-                <cell type="subview" id="12" name="accessionAgents"
+                <cell type="subview" viewsetname="view valid" id="12" name="accessionAgents"
                     class="edu.ku.brc.hyla.AccessionAgent"/>
             </row>
             <row>
