--- a/trunk/Specify/config/fish_label.jrxml
+++ b/trunk/Specify/config/fish_label.jrxml
@@ -30,7 +30,7 @@
 	<import value="net.sf.jasperreports.engine.data.*" />
 	<parameter name="itemnum" class="java.lang.String"/>
 
-	<queryString><![CDATA[Select collectionobject.FieldNumber as fieldNum, collectionobject.CatalogNumber as cat_no, collectionobject.TimestampCreated as date, collectionobject.Name as name, taxon.Name as species, agent.LastName as catalogedBy, locality.LocalityName as locality, locality.Latitude1 as latitude, locality.Longitude1 as longitude From collectionobject Inner Join determination ON determination.CollectionObjectID = collectionobject.CollectionObjectID  AND (collectionobject.CatalogNumber $P!{itemnum}) Inner Join taxon ON determination.TaxonID = taxon.TaxonID Inner Join agent ON collectionobject.CatalogerID = agent.AgentID, locality Inner Join collectingevent ON collectionobject.CollectingEventID = collectingevent.CollectingEventID AND collectingevent.LocalityID = locality.LocalityID]]></queryString>
+	<queryString><![CDATA[Select collectionobject.FieldNumber as fieldNum, collectionobject.CatalogNumber as cat_no, collectionobject.TimestampCreated as date, collectionobject.Name as name, taxon.Name as species, agent.LastName as catalogedBy, locality.LocalityName as locality, locality.Latitude1 as latitude, locality.Longitude1 as longitude From collectionobject Inner Join determination ON determination.CollectionObjectID = collectionobject.CollectionObjectID  Inner Join taxon ON determination.TaxonID = taxon.TreeID Inner Join collectingevent ON collectionobject.CollectingEventID = collectingevent.CollectingEventID Inner Join locality ON collectingevent.LocalityID = locality.LocalityID Inner Join agent ON collectionobject.CatalogerID = agent.AgentID where collectionobject.CollectionObjectID $P!{itemnum}]]></queryString>
 	<field name="cat_no" class="java.lang.String"/>
 	<field name="catalogedBy" class="java.lang.String"/>
 	<field name="date" class="java.util.Date"/>
@@ -58,7 +58,7 @@
 		</columnHeader>
 		<detail>
 			<band height="126"  isSplitAllowed="true" >
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="147"
@@ -102,7 +102,7 @@
 					</textElement>
 				<text><![CDATA[University of Kansas Museum of Natural History - Icthyology]]></text>
 				</staticText>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="0"
@@ -124,7 +124,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA["Coll: "+$F{catalogedBy}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="208"
@@ -146,7 +146,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[(new SimpleDateFormat("yyyy/MM/dd")).format($F{date})]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="0"
@@ -166,7 +166,7 @@
 					<textElement textAlignment="Left" verticalAlignment="Top" rotation="None" lineSpacing="Single">
 						<font fontName="Arial" pdfFontName="Helvetica" size="7" isBold="false" isItalic="false" isUnderline="false" isPdfEmbedded ="false" pdfEncoding ="Cp1252" isStrikeThrough="false" />
 					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA["Field #: "+$F{fieldNum}]]></textFieldExpression>
+				<textFieldExpression   class="java.lang.String"><![CDATA["Field #: "+ ((edu.ku.brc.specify.helpers.Scriptlet)$P{REPORT_SCRIPTLET}).formatFieldNo($F{fieldNum})]]></textFieldExpression>
 				</textField>
 				<staticText>
 					<reportElement
@@ -266,7 +266,7 @@
 						isPrintWhenDetailOverflows="false"/>
 					<graphicElement stretchType="NoStretch" pen="Thin" fill="Solid" />
 				</line>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="0"
@@ -324,7 +324,7 @@
 						isPrintWhenDetailOverflows="false"/>
 					<graphicElement stretchType="NoStretch" pen="Thin" fill="Solid" />
 				</line>
-				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="false" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="0"
@@ -346,7 +346,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{species}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="0"
@@ -368,7 +368,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[((edu.ku.brc.specify.helpers.Scriptlet)$P{REPORT_SCRIPTLET}).locality($F{locality}, $F{latitude}, $F{longitude})]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="272"
@@ -390,7 +390,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$F{cat_no}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						mode="Opaque"
 						x="272"
